# Study_language_CPlusPlus

./: .gitattributes  .gitmodules
SuperStar/: .gitattributes  .gitignore  CMakeLists.txt  CodeCleanup.bat  EnvBuild.bat  EnvClean.bat  ProjBuild.bat  ProjClean.bat  README.md  UpdateAsset.bat
SuperStar/Game/: CMakeLists.txt  Config.cmake  ThirdPartyNotices.txt  UpdateAsset.bat
SuperStar/Game/Code/: Common.cpp  Common.h  Main.cpp  Main.h
SuperStar/Game/Code/Asset/: ParamaterAssetData.cpp  ParamaterAssetData.h
SuperStar/Game/Code/InGame/: InGameActorSystem.cpp  InGameActorSystem.h  InGameTag.h
SuperStar/Game/Code/Level/: LevelInGame.cpp  LevelInGame.h  LevelLauncher.cpp  LevelLauncher.h  LevelTitle.cpp  LevelTitle.h
SuperStar/Game/TestCode/Asset/: TestAsset.hpp
SuperStar/Game/TestCode/Event/: TestEvent.hpp
SuperStar/HobbyEngine/: ApplicationFramework.cpp  ApplicationFramework.h  CMakeLists.txt  Config.cmake  README.md
SuperStar/HobbyEngine/Engine/: Engine.cpp  Engine.h  GameMain.h  Macro.h  Str.h  Type.h
SuperStar/HobbyEngine/Engine/AsyncTask/: AsyncTask.cpp  AsyncTask.h  AsyncTaskManager.cpp  AsyncTaskManager.h
SuperStar/HobbyEngine/Engine/Common/: CustomArray.h  CustomList.h  CustomMap.h  CustomStack.h  CustomString.cpp  CustomString.h  CustomVector.h  Function.h  Handle.cpp  Handle.h  Hash.cpp  Hash.h  PoolManager.h  RTTI.cpp  RTTI.h  Singleton.h  UUID.cpp  UUID.h
SuperStar/HobbyEngine/Engine/File/: Path.cpp  Path.h
SuperStar/HobbyEngine/Engine/Math/: Color.h  Math.cpp  Math.h  Matrix3.cpp  Matrix3.h  Matrix4.cpp  Matrix4.h  Quaternion.cpp  Quaternion.h  Rect2.cpp  Rect2.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.h
SuperStar/HobbyEngine/Engine/Memory/: Memory.cpp  Memory.h  MemoryManager.cpp  MemoryManager.h
SuperStar/HobbyEngine/Engine/Module/: Module.cpp  Module.h
SuperStar/HobbyEngine/Engine/Platform/: PlatformFile.h  PlatformFont.h  PlatformInput.cpp  PlatformInput.h  PlatformModule.h  PlatformScreen.cpp  PlatformScreen.h  PlatformSystem.h  PlatformTime.h
SuperStar/HobbyEngine/Engine/Task/: Task.cpp  Task.h  TaskManager.cpp  TaskManager.h  TaskTree.cpp  TaskTree.h
SuperStar/HobbyEngine/Engine/Time/: FPS.cpp  FPS.h
SuperStar/HobbyEngine/EngineTest/AsyncTask/: TestAsyncTask.hpp
SuperStar/HobbyEngine/EngineTest/Common/: TestArray.hpp  TestHash.hpp  TestLambda.hpp  TestList.hpp  TestMacro.hpp  TestMap.hpp  TestPoolManager.hpp  TestStack.hpp  TestString.hpp  TestUUID.hpp  TestVector.hpp
SuperStar/HobbyEngine/EngineTest/Memory/: TestMemory.hpp
SuperStar/HobbyEngine/EngineTest/Task/: TestTask.hpp
SuperStar/HobbyEngine/Inc/Engine/: Config.h  Core.h  Engine.h  Generated.h  Macro.h  MiniEngine.h  Str.h  Type.h  pch.h
SuperStar/HobbyEngine/Script/: MoveDir.bat
SuperStar/HobbyEngine/Script/CodeCleanup/: CodeCleanup.bat
SuperStar/HobbyEngine/Src/: ApplicationFramework.cpp  Engine.cpp  pch.cpp
SuperStar/HobbyEngine/Src/AsyncTask/: AsyncTask.cpp  AsyncTaskManager.cpp
SuperStar/HobbyEngine/Src/Common/: CustomString.cpp  Handle.cpp  Hash.cpp  RTTI.cpp  UUID.cpp
SuperStar/HobbyEngine/Src/File/: Path.cpp
SuperStar/HobbyEngine/Src/Math/: Math.cpp  Matrix3.cpp  Matrix4.cpp  Quaternion.cpp  Rect2.cpp  Vector2.cpp  Vector3.cpp
SuperStar/HobbyEngine/Src/Memory/: Memory.cpp  MemoryManager.cpp
SuperStar/HobbyEngine/Src/Module/: Module.cpp
SuperStar/HobbyEngine/Src/Platform/: PlatformGraphic.cpp  PlatformInput.cpp  PlatformModule.cpp  PlatformScreen.cpp
SuperStar/HobbyEngine/Src/Task/: Task.cpp  TaskManager.cpp  TaskTree.cpp
SuperStar/HobbyEngine/Src/Time/: FPS.cpp
SuperStar/HobbyEngine/Test/: CMakeLists.txt  Config.cmake  TestEngine.hpp
SuperStar/HobbyEngine/Test/AsyncTask/: TestAsyncTask.cpp
SuperStar/HobbyEngine/Test/Common/: TestArray.cpp  TestHash.cpp  TestLambda.cpp  TestList.cpp  TestMacro.cpp  TestMap.cpp  TestPoolManager.cpp  TestStack.cpp  TestString.cpp  TestUUID.cpp  TestVector.cpp
SuperStar/HobbyEngine/Test/Math/: TestMath.cpp
SuperStar/HobbyEngine/Test/Memory/: TestMemory.cpp
SuperStar/HobbyEngine/Test/Task/: TestTask.cpp
SuperStar/HobbyEngine/cmake/: Boot.cmake  Common.cmake  Plugin.cmake  Project.cmake  Test.cmake  UTF8.cmake  VCPkg.cmake
SuperStar/HobbyPlugin/: Plugin.cmake
SuperStar/HobbyPlugin/Actor/: ActorModule.h  CMakeLists.txt  Config.cmake  README.md  ThirdPartyNotices.txt
SuperStar/HobbyPlugin/Actor/Actor/: Actor.cpp  Actor.h  ActorInterface.h  ActorManager.cpp  ActorManager.h
SuperStar/HobbyPlugin/Actor/Inc/: ActorModule.h
SuperStar/HobbyPlugin/AssetManager/: AssetManagerModule.cpp  AssetManagerModule.h  CMakeLists.txt  Config.cmake  README.md  ThirdPartyNotices.txt
SuperStar/HobbyPlugin/DxLib/: Config.cmake  DXLibModule.cpp
SuperStar/HobbyPlugin/EnhancedInput/: CMakeLists.txt  Config.cmake  EnhancedInputModule.cpp  EnhancedInputModule.h  README.md
SuperStar/HobbyPlugin/Event/: CMakeLists.txt  Config.cmake  EventModule.cpp  EventModule.h  README.md
SuperStar/HobbyPlugin/GameDevGUI/: .vcpkg.json  CMakeLists.txt  Config.cmake  GameDevGUIModule.cpp  GameDevGUIModule.h  README.md
SuperStar/HobbyPlugin/Level/: CMakeLists.txt  Config.cmake  LevelModule.cpp  LevelModule.h  README.md
SuperStar/HobbyPlugin/Localization/: CMakeLists.txt  Config.cmake  LocalizationModule.cpp  LocalizationModule.h  README.md
SuperStar/HobbyPlugin/Lua/: CMakeLists.txt  Config.cmake  LuaModule.cpp  LuaModule.h  README.md  ThirdPartyNotices.txt
SuperStar/HobbyPlugin/PlatformSDL2/: .gitignore  .vcpkg.json  CMakeLists.txt  Config.cmake  PlatformSDL2Module.cpp  PlatformSDL2Module.h  README.md  ThirdPartyNotices.txt  vcpkg.json
SuperStar/HobbyPlugin/Render/: CMakeLists.txt  Config.cmake  README.md  RenderModule.cpp  RenderModule.h
SuperStar/HobbyPlugin/RuntimeDebug/: .editorconfig  .gitignore  CMakeLists.txt  Config.cmake  README.md  RuntimeDebugModule.cpp  RuntimeDebugModule.h
SuperStar/HobbyPlugin/UI/: CMakeLists.txt  Config.cmake  UIModule.cpp  UIModule.h
SuperStar/HobbyPlugin/UI/UI/: Event.h  (+2 more)
SuperStar/Test/: CMakeLists.txt  Config.cmake  README.md  TestCommon.h  TestMain.cpp
(+344 files in other folders)
